In Development:
# Mentioning Check 0.10.0 for now, to fix distcheck target until next release

* Add LGPL header to files where it was missing; update FSF address in LGPL headers
  Bug #110

Sun Aug 2, 2015: Released Check 0.10.0
  based on r1217 (2015-08-02 19:21:14 +0000)

* CMake on MinGW and MSVC was unable to find time related types because
  time.h was not included. This header is now included for the checks.
  Patch #53.

* If the test runner process catches a SIGTERM or SIGINT signal the running
  tests are now also killed.
  Patch #52.

* If Check is compiled without support for fork(), the behavior of
  functions which require fork() to be useful have been changed.
  Functions that attempt to set CK_FORK mode are no-ops,
  check_fork() returns in failure, and check_waitpid_and_exit()
  exits in failure.

* Add space around operators in assert messages for readability.
  Bug #102.

* Use mkstemp() if available instead of tmpfile() or tempnam().
  Patch #51.

* Fix issue with string formatting in ck_assert(), where using
  the % operator would be interpreted as a string formatter. Bug #96.

* In nofork mode, the location of a failed assertion within a test
  case was lost if that test case has a checked teardown fixture
  (even if that fixture function is empty). This is now fixed.
  Bug #99


Sat July 26, 2014: Released Check 0.9.14
  based on r1174 (2014-07-03 18:43:49 +0000)

* Changes to (unofficially for now) support Solaris and AIX platforms.

* Fix issue with checked teardown functions in CK_NOFORK mode. If
  the teardown function called an assertion that failed, an
  infinate loop would result. Bug#98. As a result of the change, for now
  checked teardown functions that fail in CK_NOFORK mode will
  not cause the test to fail.

* Allow checked fixtures when compiled without fork(). Previously
  such setup/teardown functions were disabled, as the full contract
  for checked fixtures could not be honored. Checked fixtures